2005-03-01 Andreas Fink <afink@gni.ch>
    * gw/smsc/smsc_at.c: be more friendly to modems which
      are not ready after opening serial port or after AT&F.
      Helps Ericsson T300

2005-03-01 Aarno Syvanen <as@gni.ch>
    * gw/smsc/smsc_at.c: Fixed error messages in "slow modem start patch"

2005-03-01  Stipe Tolj  <stolj@wapme.de> 
    * configure[.in], gw-config.h.in, gwlib/http.c: added option to make
      HTTP/1.1 keep-alive support disabled via optional configure switch 
      --disable-keepalive. Thanks to Jonathan Hauser 
      <jhouser@wirelessonenet.com> for this patch.
      [Msg-ID: <421B8103.7070301@wirelessonenet.com>]

2005-03-01  Stipe Tolj  <stolj@wapme.de> 
    Portability enhancement for non-gcc compilers, no logic change.
    * gw/smsc/smsc_smpp.c: changed gcc specific magic macro __PRETTY_FUNCTION_
      to __func__ that is more generic, because of gw-config.h.in macro
      rule used.
    * readius/radius_pdu.c: remove void NULL void call and enclose into an
      if statement.
      Thanks to Mike Bristrow <mike@urgle.com> for the patch.
      [Msg-ID: <20050218120010.GA17561@urgle.com>]

2005-03-01  Stipe Tolj  <stolj@wapme.de> 
    * configure[.in]: added support to find docbook.dsl file on Debian 
      unstable. Thanks to Benjamin for this patch.
      [Msg-ID: <20050219161644.GA938@xaos.realthought.net>]

2003-02-23 Aarno Syvanen <as@gni.ch>
    * doc/userguide/userguide.xml: changed the added si doc
      to minimum one, so that users can minimize the 
      generated si message.

2005-02-20 Aarno Syvanen <as@gni.ch>
    * doc/userguide/userguide.xml: added an example si document
    * gw/smsbox.c: ppg dlr-url should work now when it is a
      configuration variable. Fix suggested by Davy Chan
    * gw/wapbox.c: reload (SIGHUP) does not change value of 
      configuration variable concatenation
    * gw/smsc/smsc_at.c: Handle a very slow initialisation. This is
      a patch by Andreas.